# terminal-dj

./: .env  Cargo.toml
.github/workflows/: ci.yml
config/: config.toml
src/: app.rs  assets.rs  audio.rs  bpm.rs  db.rs  downloader.rs  eq.rs  events.rs  karaoke.rs  lastfm.rs  library.rs  main.rs  metadata.rs  playlist.rs  soundcloud.rs  spotify.rs  ui.rs
src/app/: mod.rs
src/ui/: library.rs  mod.rs
